<resources>
    <string name="app_name">Bat&amp;Tiger</string>
    <string name="HumanChoice">Human Choice</string>
    <string name="ComputerChoice">Computer Choice</string>
    <string name="image_human_choice">image human choice</string>
    <string name="image_computer_choice">image computer choice</string>
    <string name="Score">Score: Human 0 Computer 0</string>
    <string name="Tiger">Tiger</string>
    <string name="Bug">Bug</string>
    <string name="Stick">Stick</string>
    <string name="Chicken">Chicken</string>

</resources>